[mirotalksfu] - fix Video Menu Bar on mobile

--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -153,7 +153,7 @@
 
 /* Mobile floating menubar when appended to body */
 .videoMenuBar.mobile-floating {
-    z-index: 2;
+    z-index: 1000;
     position: fixed;
     top: env(safe-area-inset-top, 0px);
     left: 0;
